# AutoKiteScript

./: Cargo.toml
src/: main.rs
