[package]
name = "league_auto_kite_cheat"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
enigo = "0.1.3"
tokio = { version = "1.33.0", features = ["full"] }
win_key_codes = "0.1.2"
winapi = { version = "0.3", features = ["winuser"] }
